--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "personal"]
 	path = personal
 	url = git@github.com:drc/personal.git
+[submodule "vim/dot-vim/plugged/gruvbox"]
+	path = vim/dot-vim/plugged/gruvbox
+	url = git@github.com:morhetz/gruvbox.git
