tmux more usable for myself as im learning

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,1 +1,11 @@
+# reload config file
 bind r source-file ~/.tmux.conf
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# enable mouse control ( clickable window, pane, resize pane )
+set -g mouse on
