adding arrow key movement

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -9,3 +9,9 @@ unbind %
 
 # enable mouse control ( clickable window, pane, resize pane )
 set -g mouse on
+
+# switch panes with alt key
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
