--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -18,6 +18,7 @@ brew "xz"
 brew "ansible"
 brew "antigen"
 brew "webp"
+brew "asciinema"
 brew "automake"
 brew "bandwhich"
 brew "bat"
@@ -25,10 +26,10 @@ brew "bison"
 brew "bottom"
 brew "libffi"
 brew "glib"
-brew "chruby"
 brew "cowsay"
 brew "dust"
 brew "exa"
+brew "fd"
 brew "libtasn1"
 brew "gnutls"
 brew "harfbuzz"
@@ -36,6 +37,7 @@ brew "rubberband"
 brew "sdl2"
 brew "x265"
 brew "ffmpeg"
+brew "fzf"
 brew "geckodriver"
 brew "pcre2"
 brew "git"
@@ -50,17 +52,20 @@ brew "lsusb"
 brew "mas"
 brew "protobuf"
 brew "mitmproxy"
+brew "mosh"
 brew "nmap"
 brew "openssh"
 brew "p7zip"
+brew "qrencode"
 brew "ripgrep"
-brew "ruby-install"
 brew "rustup-init"
 brew "starship"
 brew "stow"
 brew "tealdeer"
 brew "telnet"
+brew "tmux"
 brew "youtube-dl"
+brew "zsh"
 brew "cloudflare/cloudflare/cloudflared"
 brew "heroku/brew/heroku"
 cask "1clipboard"
@@ -82,10 +87,12 @@ cask "krita"
 cask "malwarebytes"
 cask "microsoft-auto-update"
 cask "obs"
+cask "obsidian"
 cask "onyx"
 cask "postman"
 cask "powershell"
 cask "processing"
+cask "raspberry-pi-imager"
 cask "rectangle"
 cask "signal"
 cask "spotify"
@@ -105,3 +112,4 @@ mas "Microsoft Remote Desktop", id: 1295203466
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Vectornator", id: 1219074514
+mas "WireGuard", id: 1451685025
